# self-healing-agent

./: .gitignore  README.md  all_steps_explanations.md  phase-1-spec-self-healing-agent.md
.github/workflows/: backend-ci.yml
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_deployments_and_healing_attempts.py
backend/app/: main.py
backend/app/api/: deployments.py  health.py  websocket.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: deployment.py
backend/app/schemas/: deployment.py
backend/app/services/: healing_service.py  llm_service.py  terraform_service.py
backend/app/ws/: manager.py
backend/fixtures/fault_missing_required_argument/: error_log.txt  main.tf
backend/scripts/: smoke_test_llm.py
backend/tests/: conftest.py  test_deployments_api.py  test_health.py  test_llm_service.py  test_terraform_service.py  test_websocket.py
frontend/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DeploymentDetail.tsx  DeploymentList.tsx  StatusBadge.tsx  TriggerButton.tsx
frontend/src/lib/: api.ts  useDeploymentSocket.ts
frontend/src/types/: deployment.ts
