[project]
name = "self-healing-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "google-genai>=1.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5", "mypy>=1.10", "poethepoet>=0.26"]

# Tell setuptools to only package "app" — the "alembic" directory is config, not code
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload"
test = "pytest -v"
lint = "ruff check ."
format = "ruff format ."
db-up = "docker compose up -d"
db-down = "docker compose down"
migrate = "alembic upgrade head"
